# python-ms-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  setup-new-project.sh
.github/workflows/: ci.yml
tests/: test_main.py
